# poly-maker

./: .dockerignore  .env.example  .gitignore  AUDIT.md  CONFIGURATION.md  CRITICAL_ALGORITHMS_REFERENCE.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  ENHANCEMENTS.md  GETTING_STARTED_PAPER_TRADING.md  Makefile  ORIGINAL_SYSTEM_DOCUMENTATION.md  PAPER_TRADING.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TRADING_ALGORITHMS_DEEP_DIVE.md  backfill_tweet_window.py  config.py  docker-compose.yml  healthcheck.py  main.py  main_tweets.py  pyproject.toml  record_tweet_markets.py  replay_tweet_strategies.py  setup_paper_trading.sh  test_paper_trading.py  trading.py  tweet_trading.py  update_markets.py  view_paper_report.py
config/: config.toml  markets.toml  strategy.toml
data_updater/: find_markets.py
docs/scoping/: 00-overview.md  01-current-state.md  02-architecture.md  03-api-layer.md  04-strategy.md  05-config-and-ops.md  06-migration-plan.md  07-future-external-data.md
livecfg/: config.toml  markets.toml  strategy.toml
poly_data/: CONSTANTS.py  data_processing.py  data_utils.py  dynamic_spread.py  global_state.py  paper_trading_client.py  polymarket_client.py  portfolio_optimizer.py  regime_detector.py  reward_calculator.py  risk_metrics.py
poly_maker_v2/: config_loader.py  pyproject.toml
poly_maker_v2/config/: markets.yaml  strategy.yaml
poly_maker_v2/core/: abis.py  client.py  orderbook.py  state.py  types.py
scripts/: bootstrap_ubuntu.sh
session/: monitor.py  watch.py
src/polymaker/: __init__.py  alerts.py  cli.py  config.py  doctor.py  domain.py  engine.py  journal.py  livetest.py  logging.py  merge.py
src/polymaker/catalog/: gamma.py  scanner.py  scoring.py  store.py
src/polymaker/execution/: gateway.py  ratelimit.py  reconciler.py
src/polymaker/marketdata/: orderbook.py  parse.py  service.py
src/polymaker/risk/: manager.py
src/polymaker/state/: store.py  tracker.py
src/polymaker/strategy/: estimators.py  quoting.py  regime.py
src/polymaker/userstream/: client.py  parse.py
tests/: conftest.py  test_catalog.py  test_config.py  test_engine.py  test_estimators.py  test_execution.py  test_hardening2.py  test_live_marketdata.py  test_logger.py  test_market_discovery.py  test_marketdata.py  test_orderbook.py  test_pace_calculator.py  test_quoting.py  test_regime.py  test_risk.py  test_state.py  test_tweet_counter.py  test_tweet_engine_core.py  test_tweet_engine_io.py  test_tweet_engine_services.py  test_tweet_state.py  test_twitter_client.py  test_userstream_parse.py  test_xtracker_client.py
tweet_engine/: __init__.py  cli.py  data_sources.py  models.py  normalization.py  recorder.py  replay.py  reporting.py  services.py  simulator.py
tweet_engine/strategies/: __init__.py  adjacent_bucket_arb.py  pace_mispricing.py
tweet_tracker/: __init__.py  alpha_eval.py  config.py  logger.py  market_discovery.py  pace_calculator.py  tweet_counter.py  tweet_state.py  twitter_client.py  xtracker_client.py
tweet_tracker/strategies/: __init__.py
